--- a/style.css/bd.css
+++ b/style.css/bd.css
@@ -82,3 +82,59 @@
     color: #FFF;
     font-size: 18px;
 }
+
+/* start of pillars bangladesh */
+main {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 30px;
+    margin-top: 30px;
+}
+
+.container {
+    text-align: center;
+}
+
+.container .box-container {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 32px;
+}
+
+.container .Innovation {
+    text-align: justify;
+    display: flex;
+    width: 302px;
+    height: 200px;
+    padding: 24px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+    border-radius: 16px;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+
+    background: #FFF;
+
+
+}
+
+.container .Innovation h2 {
+    color: rgba(14, 14, 14, 0.80);
+
+    font-family: "Fira Sans";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.container .Innovation p {
+    color: rgba(14, 14, 14, 0.70);
+
+    font-family: "Fira Sans";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+}
