--- a/style.css/bd.css
+++ b/style.css/bd.css
@@ -299,21 +299,12 @@ main {
 }
 
 .bangladesh-bd {
-    display: flex;
     padding: 48px 24px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 24px;
-    flex: 1 0 0;
     background-image: url("../assets/quote-bg.png");
     background-repeat: no-repeat;
     margin-top: 32px;
     border-radius: 18px;
     border: 2px solid rgba(14, 14, 14, 0.15);
-
-
-
-
 }
 
 .bangladesh-bd h1 {
@@ -324,6 +315,7 @@ main {
     font-style: normal;
     font-weight: 600;
     line-height: 24px;
+    margin-bottom: 12px;
 }
 
 .bangladesh-bd p {
@@ -334,6 +326,7 @@ main {
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
+    margin-bottom: 12px;
 }
 
 /* recent news part */
