--- a/style.css/bd.css
+++ b/style.css/bd.css
@@ -28,7 +28,8 @@
 }
 
 .btn-primary:hover {
-    background-color: #FFC239;
+    background-color: #EECE29;
+    ;
 }
 
 /* satar header section */
@@ -46,14 +47,25 @@
     gap: 48px;
     border-radius: 8px;
     border: 1px solid #006A50;
-    margin-bottom: 24px;
+
 }
 
+.logo h1 {
+    color: #0E0E0E;
+
+    font-family: "Fira Sans";
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
 
 .header-wrraper .navber {
     display: flex;
-    justify-content: space-around;
-    padding: 10px;
+    justify-content: space-between;
+    padding: 24px 0px 44px 0px;
+    margin: 0 auto;
+    width: 1280px;
 }
 
 .header-wrraper .banner-container {
@@ -66,6 +78,7 @@
     padding: 80px 100px;
     margin: 0 auto;
     gap: 24px;
+
 }
 
 .header-wrraper .content h5 {
@@ -96,7 +109,7 @@ main {
 
     width: 1280px;
 
-    padding: 60px 100px;
+    padding: 80px 100px;
     margin: 0 auto;
 }
 
@@ -157,9 +170,8 @@ main {
 }
 
 /* start vision of future */
-
 .card-section {
-    padding: 0 auto;
+    margin-top: 80px;
 }
 
 .vision-of-future .card-container {
@@ -181,8 +193,8 @@ main {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-left: 20px;
-    margin-top: 80px;
+
+
 
 }
 
@@ -197,37 +209,34 @@ main {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-left: 20px;
+
+    margin: 24px 0px 32px 0px;
+
 }
 
 .vision-of-future .card-box1 {
-    text-align: justify;
-    width: 347px;
 
+    width: 347px;
     border-radius: 16px;
-    padding: 20px;
+    padding: 32px;
     border: 0px solid #5490F5;
     background: rgba(84, 144, 245, 0.20);
 }
 
 .vision-of-future .card-box2 {
-    text-align: justify;
+
     width: 347px;
-
     border-radius: 16px;
-    padding: 20px;
+    padding: 32px;
     border: 0px solid #09A15C;
-
-
-    background: #C6E4D6;
+    background: #C6E4D6
 }
 
 .vision-of-future .card-box3 {
-    text-align: justify;
-    width: 347px;
 
+    width: 347px;
     border-radius: 16px;
-    padding: 20px;
+    padding: 32px;
     border: 0px solid #FFC239;
     background: #F7EBCF;
 }
@@ -240,8 +249,28 @@ main {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    margin-top: 20px;
+    margin-bottom: 12px;
+
 }
+
+.card-box1 img {
+    width: 64px;
+    height: 64px;
+    margin-bottom: 24px;
+}
+
+.card-box2 img {
+    width: 64px;
+    height: 64px;
+    margin-bottom: 24px;
+}
+
+.card-box3 img {
+    width: 64px;
+    height: 64px;
+    margin-bottom: 24px;
+}
+
 
 .vision-of-future .description {
     color: rgba(14, 14, 14, 0.70);
@@ -251,6 +280,7 @@ main {
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
+    margin-bottom: 24px;
 }
 
 .learn-more1 {
@@ -259,7 +289,7 @@ main {
     color: #FFF;
     padding: 11px 20px;
     border-style: none;
-    margin-top: 15px;
+
 }
 
 .learn-more2 {
@@ -268,7 +298,8 @@ main {
     color: #FFF;
     padding: 11px 20px;
     border-style: none;
-    margin-top: 15px;
+    margin-top: 24px;
+
 }
 
 .learn-more3 {
@@ -277,19 +308,22 @@ main {
     color: #FFF;
     padding: 11px 20px;
     border-style: none;
-    margin-top: 15px;
+
 }
 
 .learn-more1:hover {
-    background-color: aqua;
+    background-color: #0D5DE7;
+    ;
 }
 
 .learn-more2:hover {
-    background-color: aqua;
+    background-color: #077443;
+    ;
 }
 
 .learn-more3:hover {
-    background-color: aqua;
+    background-color: #F5AB00;
+    ;
 }
 
 .opation {
@@ -362,6 +396,7 @@ main {
     font-weight: 400;
     line-height: 24px;
 
+
 }
 
 .bangladesh-launches .box2 {
@@ -381,6 +416,12 @@ main {
 }
 
 
+.bangladesh-launches {
+    margin-top: 80px;
+
+}
+
+
 
 .bangladesh-launches .news-satellite h1 {
     color: rgba(14, 14, 14, 0.80);
@@ -390,7 +431,9 @@ main {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    margin-top: 30px;
+    margin-bottom: 24px;
+
+
 }
 
 .bangladesh-launches .news-satellite p {
@@ -401,6 +444,7 @@ main {
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
+    gap: 24px;
     margin-top: 12px;
 }
 
@@ -444,7 +488,8 @@ main {
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
-    margin-bottom: 32px;
+    margin: 24px 0px 32px 0px;
+
 }
 
 .donate-money button {
@@ -495,6 +540,7 @@ main {
     background: #FFF;
     margin-top: 32px;
     text-align: center;
+    color: #0E0E0E;
 }
 
 .btn {
@@ -503,12 +549,18 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 30px;
+    color: rgba(14, 14, 14, 0.30);
 
+    font-family: "Fira Sans";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 80px;
 }
 
 .Done-Now:hover {
-    background-color: #FFC239;
+    background-color: #F5AB00;
 }
 
 .Done-Now {
@@ -537,6 +589,7 @@ main {
     padding: 80px 100px;
     justify-content: center;
     align-items: center;
+
 
 }
 
@@ -586,12 +639,8 @@ main {
 
     border-radius: 8px 0px 0px 8px;
     background: #FFF;
-
     width: 600px;
     padding: 18px 40px;
-    flex-direction: column;
-    align-items: flex-start;
-    padding-left: 40px;
     border-style: none;
     color: rgba(14, 14, 14, 0.30);
     font-family: "Fira Sans";
@@ -600,6 +649,9 @@ main {
     font-weight: 400;
     line-height: normal;
 }
+
+
+
 
 .subscribe-title .Subscribe {
     background-color: #006A50;
@@ -616,7 +668,8 @@ main {
 }
 
 .subscribe-title .Subscribe:hover {
-    background-color: brown;
+    background-color: #F5AB00;
+    ;
 }
 
 /* start footer part */
@@ -629,10 +682,9 @@ footer {
     align-items: center;
     gap: 32px;
     align-self: stretch;
-
 }
 
-.footer-section-title {
+.footer-section-title h2 {
     color: #0E0E0E;
 
     font-family: "Fira Sans";
@@ -640,8 +692,6 @@ footer {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    margin-bottom: 32px;
-
 }
 
 .social-icon {
@@ -655,8 +705,6 @@ footer {
     width: 1122px;
     height: 1px;
     background: rgba(14, 14, 14, 0.10);
-
-
 }
 
 .social-icon a img {
